NetBSD Problem Report #47692

From www@NetBSD.org  Mon Mar 25 13:16:28 2013
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id C9BBD63E6FA
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 25 Mar 2013 13:16:27 +0000 (UTC)
Message-Id: <20130325131627.3094563E6FA@www.NetBSD.org>
Date: Mon, 25 Mar 2013 13:16:27 +0000 (UTC)
From: isaki@pastel-flower.jp
Reply-To: isaki@pastel-flower.jp
To: gnats-bugs@NetBSD.org
Subject: FMOD on m68k FPE seems to be wrong
X-Send-Pr-Version: www-1.0

>Number:         47692
>Category:       kern
>Synopsis:       FMOD on m68k FPE seems to be wrong
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Mar 25 13:20:00 +0000 2013
>Closed-Date:    Tue Mar 26 11:05:28 +0000 2013
>Last-Modified:  Tue Mar 26 11:05:28 +0000 2013
>Originator:     Tetsuya Isaki
>Release:        NetBSD/x68k-6.1_RC1
>Organization:
>Environment:
NetBSD xxxxxx 6.1_RC1 NetBSD 6.1_RC1 (GENERIC) x68k
>Description:
FMOD emulation on m68k FPE seems to be wrong with some value.

FMOD(100, 10) = 0, ok
FMOD(101, 10) = 29, NG!!
FMOD(10, M_PI) = 0.575222, ok
FMOD(100, M_PI) = 2.61063, ok
FMOD(1000, M_PI) = 605.3538, NG!!
>How-To-Repeat:
Try this on m68k without FPU (such as XM6i :-).

% dmesg | grep CPU
X68030 (m68030 CPU/MMU, emulator FPU, 29MHz clock)

% cat main.c
#include<stdio.h>
extern double my_fmod(double, double);
int main() {
        double x = 101;
        double y = 10;
        printf("FMOD(%g, %g) = %g\n", x, y, my_fmod(x, y));
}

% cat fmod_s.s
        .text
        .even
        .globl  my_fmod
        .type   my_fmod,@function
my_fmod:
        fmoved  %sp@(4),%fp0
        fmodd   %sp@(12),%fp0
        rts

% gcc -o fmod main.c fmod_s.s
% ./fmod
>Fix:
N/A

>Release-Note:

>Audit-Trail:
From: "Tetsuya Isaki" <isaki@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47692 CVS commit: src/sys/arch/m68k/fpe
Date: Tue, 26 Mar 2013 10:57:15 +0000

 Module Name:	src
 Committed By:	isaki
 Date:		Tue Mar 26 10:57:13 UTC 2013

 Modified Files:
 	src/sys/arch/m68k/fpe: fpu_rem.c

 Log Message:
 Fix a wrong "raw" comparison in step3.2.
 It should solve a PR kern/47692.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/sys/arch/m68k/fpe/fpu_rem.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: isaki@NetBSD.org
State-Changed-When: Tue, 26 Mar 2013 11:05:28 +0000
State-Changed-Why:
Fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.