Fix a wrong "raw" comparison in step3.2. It should solve a PR kern/47692.